--- a/gallery.html
+++ b/gallery.html
@@ -305,26 +305,22 @@
               </form>
             </div>
             <ul class="list-inline f-social">
-              <li class="list-inline-item">
-                <a href="#"
+               <li class="list-inline-item">
+                <a href="https://www.facebook.com/moodmakers2303"
                   ><i class="fa fa-facebook" aria-hidden="true"></i
                 ></a>
               </li>
               <li class="list-inline-item">
                 <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               </li>
-              <li class="list-inline-item">
-                <a href="#"
-                  ><i class="fa fa-linkedin" aria-hidden="true"></i
-                ></a>
-              </li>
+            
               <li class="list-inline-item">
                 <a href="#"
                   ><i class="fa fa-google-plus" aria-hidden="true"></i
                 ></a>
               </li>
               <li class="list-inline-item">
-                <a href="#"
+                <a href="https://www.instagram.com/moodmakers_bar"
                   ><i class="fa fa-instagram" aria-hidden="true"></i
                 ></a>
               </li>
