--- a/menu.html
+++ b/menu.html
@@ -117,7 +117,7 @@
             <div class="heading-title text-center">
               <h2>Special Menu</h2>
               <p>
-               If you want to dazzle your gueest and make your party talk pf the town then do check
+               If you want to dazzle your guest and make your party talk of the town then do check
                out our customized options
               </p>
             </div>
